# lynx-url-shortener

./: .pre-commit-config.yaml  README.md
.github/workflows/: deploy.yml
infrastructure/lambdas/: .gitignore  Makefile  pyproject.toml
infrastructure/lambdas/create_link/src/create_link/: __init__.py  handler.py
infrastructure/lambdas/create_link/tests/: test_handler.py
infrastructure/lambdas/edge_signer/src/edge_signer/: __init__.py  handler.py
infrastructure/lambdas/edge_signer/tests/: test_handler.py
infrastructure/terraform/: .gitignore
infrastructure/terraform/environments/dev/: backend.tf  dev.auto.tfvars  module.lynx.tf  outputs.tf  variables.tf  versions.tf
infrastructure/terraform/environments/prod/: backend.tf  locals.tf  module.lynx.tf  prod.auto.tfvars  provider_aws.tf  variables.tf
infrastructure/terraform/modules/lynx/: acm_certificate.main.tf  acm_certificate_validation.main.tf  cloudfront_distribution.main.tf  cloudfront_origin_access_control.portal.tf  cloudwatch_log_group.create_link.tf  cloudwatch_log_group.edge_signer.tf  cloudwatch_metric_alarm.cloudfront_5xx.tf  cloudwatch_metric_alarm.create_link_errors.tf  cloudwatch_metric_alarm.create_link_throttles.tf  data.archive_file.create_link.tf  data.archive_file.edge_signer.tf  data.cloudfront_origin_request_policy.all_viewer_except_host_header.tf  data.route53_zone.main.tf  (+27 more)
notes/: GITHUB_ACTIONS_IAM_POLICY.json  SPECIFICATION.md
portal/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
portal/src/: App.test.tsx  App.tsx  api.ts  styles.css
(+7 files in other folders)
