[project]
name = "lynx-lambdas"
version = "0.1.0"
description = "Shared tooling for Lynx URL shortener Lambda functions"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
